rules/test-egress-5G/test/default-policy/input/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-smf-to-upf
  namespace: oai-core
spec:
  podSelector: {} # Applies to pods with label 'app=pod1'
  policyTypes:
  - Egress
  - Ingress
  egress:
  - to:
    - podSelector:
        matchLabels:
          workload.nephio.org/oai: upf # Allows traffic to pods with label 'app=pod2'
    ports:
    - protocol: TCP
      port: 80  # Example port (e.g., HTTP)
